--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>React Profile Selection</title>
+  <title>Game Rental Service</title>
   <link rel="stylesheet" href="mainPage.css">
   <style>
     body {
